// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MongoDB basic introspection --url 2`] = `
datasource db {
  provider = "mongodb"
  url      = "mongodb://root:prisma@localhost:27017/tests-migrate?authSource=admin"
}

type UsersHobbies {
  name            String
  /// Multiple data types found: String: 50%, Int: 50% out of 2 sampled entries
  numberOrString2 Json?
  objects         UsersHobbiesObjects[]
  tags            String[]
}

type UsersHobbiesObjects {
  name            String
  /// Multiple data types found: String: 50%, Int: 50% out of 2 sampled entries
  numberOrString3 Json
  tags            String[]
}

model users {
  id              String         @id @default(auto()) @map("_id") @db.ObjectId
  admin           Boolean
  email           String
  hobbies         UsersHobbies[]
  name            String
  /// Multiple data types found: String: 50%, Int: 50% out of 2 sampled entries
  numberOrString1 Json
}


// introspectionSchemaVersion: NonPrisma,
`;

exports[`SQL Server basic introspection --url 2`] = `
datasource db {
  provider = "sqlserver"
  url      = "sqlserver://localhost:1433;database=tests-migrate;user=SA;password=Pr1sm4_Pr1sm4;trustServerCertificate=true;"
}

model jobs {
  job_id      Int       @id(map: "PK__jobs__CustomNameToAvoidRandomNumber") @default(autoincrement())
  customer_id Int?
  description String?   @db.VarChar(200)
  created_at  DateTime?
}


// introspectionSchemaVersion: NonPrisma,
`;

exports[`SQL Server basic introspection 2`] = `
datasource db {
  provider = "sqlserver"
  url      = env("TEST_MSSQL_JDBC_URI_MIGRATE")
}

model jobs {
  job_id      Int       @id(map: "PK__jobs__CustomNameToAvoidRandomNumber") @default(autoincrement())
  customer_id Int?
  description String?   @db.VarChar(200)
  created_at  DateTime?
}


// introspectionSchemaVersion: NonPrisma,
`;

exports[`cockroachdb basic introspection (no schema) --url 2`] = `
datasource db {
  provider = "postgresql"
  url      = "postgresql://prisma@localhost:26257/tests"
}

model Post {
  id        String    @id
  createdAt DateTime  @default(now())
  updatedAt DateTime  @default(dbgenerated("'1970-01-01 00:00:00'::TIMESTAMP"))
  published Boolean   @default(false)
  title     String
  content   String?
  authorId  String?
  jsonData  Json?
  coinflips Boolean[]
  User      User?     @relation(fields: [authorId], references: [id])
}

model User {
  id    String  @id
  email String  @unique(map: "User.email")
  name  String?
  Post  Post[]
}

enum Role {
  USER
  ADMIN
}


// introspectionSchemaVersion: NonPrisma,
`;

exports[`cockroachdb basic introspection (with cockroach schema) --url  2`] = `
generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "cockroachdb"
  url      = "postgresql://prisma@localhost:26257/tests"
}

model Post {
  id        String    @id
  createdAt DateTime  @default(now())
  updatedAt DateTime  @default(dbgenerated("'1970-01-01 00:00:00'::TIMESTAMP"))
  published Boolean   @default(false)
  title     String
  content   String?
  authorId  String?
  jsonData  Json?
  coinflips Boolean[]
  User      User?     @relation(fields: [authorId], references: [id])
}

model User {
  id    String  @id
  email String  @unique(map: "User.email")
  name  String?
  Post  Post[]
}

enum Role {
  USER
  ADMIN
}


// introspectionSchemaVersion: NonPrisma,
`;

exports[`cockroachdb basic introspection (with cockroach schema, cockroachdb native types) --url  2`] = `
generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "cockroachdb"
  url      = "postgresql://prisma@localhost:26257/tests"
}

model Post {
  id                String  @id
  title             String
  content           String?
  authorId          String?
  exampleChar       String? @db.Char(1)
  exampleCharLength String? @db.Char(16)
  exampleBit        String? @db.Bit(1)
  exampleBitLength  String? @db.Bit(16)
  User              User?   @relation(fields: [authorId], references: [id])
}

model User {
  id    String  @id
  email String  @unique(map: "User.email") @db.String(32)
  name  String? @db.String(32)
  Post  Post[]
}

enum Role {
  USER
  ADMIN
}


// introspectionSchemaVersion: NonPrisma,
`;

exports[`cockroachdb basic introspection (with cockroachdb schema) 2`] = `
generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "cockroachdb"
  url      = env("TEST_COCKROACH_URI")
}

model Post {
  id        String    @id
  createdAt DateTime  @default(now())
  updatedAt DateTime  @default(dbgenerated("'1970-01-01 00:00:00'::TIMESTAMP"))
  published Boolean   @default(false)
  title     String
  content   String?
  authorId  String?
  jsonData  Json?
  coinflips Boolean[]
  User      User?     @relation(fields: [authorId], references: [id])
}

model User {
  id    String  @id
  email String  @unique(map: "User.email")
  name  String?
  Post  Post[]
}

enum Role {
  USER
  ADMIN
}


// introspectionSchemaVersion: NonPrisma,
`;

exports[`cockroachdb basic introspection (with cockroachdb schema, cockroachdb native types) 2`] = `
generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "cockroachdb"
  url      = env("TEST_COCKROACH_URI")
}

model Post {
  id                String  @id
  title             String
  content           String?
  authorId          String?
  exampleChar       String? @db.Char(1)
  exampleCharLength String? @db.Char(16)
  exampleBit        String? @db.Bit(1)
  exampleBitLength  String? @db.Bit(16)
  User              User?   @relation(fields: [authorId], references: [id])
}

model User {
  id    String  @id
  email String  @unique(map: "User.email") @db.String(32)
  name  String? @db.String(32)
  Post  Post[]
}

enum Role {
  USER
  ADMIN
}


// introspectionSchemaVersion: NonPrisma,
`;

exports[`cockroachdb basic introspection (with postgresql schema) 2`] = `
generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("TEST_COCKROACH_URI")
}

model Post {
  id        String    @id
  createdAt DateTime  @default(now())
  updatedAt DateTime  @default(dbgenerated("'1970-01-01 00:00:00'::TIMESTAMP"))
  published Boolean   @default(false)
  title     String
  content   String?
  authorId  String?
  jsonData  Json?
  coinflips Boolean[]
  User      User?     @relation(fields: [authorId], references: [id])
}

model User {
  id    String  @id
  email String  @unique(map: "User.email")
  name  String?
  Post  Post[]
}

enum Role {
  USER
  ADMIN
}


// introspectionSchemaVersion: NonPrisma,
`;

exports[`cockroachdb basic introspection (with postgresql schema, cockroachdb native types) 2`] = `
generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("TEST_COCKROACH_URI")
}

model Post {
  id                String  @id
  title             String  @db.VarChar
  content           String?
  authorId          String? @db.VarChar
  exampleChar       String? @db.Char(1)
  exampleCharLength String? @db.Char(16)
  exampleBit        String? @db.Bit(1)
  exampleBitLength  String? @db.Bit(16)
  User              User?   @relation(fields: [authorId], references: [id])
}

model User {
  id    String  @id
  email String  @unique(map: "User.email")
  name  String? @db.VarChar(32)
  Post  Post[]
}

enum Role {
  USER
  ADMIN
}


// introspectionSchemaVersion: NonPrisma,
`;

exports[`common/sqlite basic introspection 2`] = `
generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = "file:dev.db"
}

model Post {
  authorId  Int
  content   String?
  createdAt DateTime @default(now())
  id        Int      @id @default(autoincrement())
  published Boolean  @default(false)
  title     String
  author    User     @relation(fields: [authorId], references: [id], onDelete: Cascade)
}

model Profile {
  bio    String?
  id     Int     @id @default(autoincrement())
  userId Int     @unique(map: "Profile.userId")
  user   User    @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model User {
  email   String   @unique(map: "User.email")
  id      Int      @id @default(autoincrement())
  name    String?
  posts   Post[]
  profile Profile?
}


// introspectionSchemaVersion: Prisma2,
`;

exports[`common/sqlite basic introspection with --url 1`] = `
generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = "file:dev.db"
}

model Post {
  authorId  Int
  content   String?
  createdAt DateTime @default(now())
  id        Int      @id @default(autoincrement())
  published Boolean  @default(false)
  title     String
  author    User     @relation(fields: [authorId], references: [id], onDelete: Cascade)
}

model Profile {
  bio    String?
  id     Int     @id @default(autoincrement())
  userId Int     @unique(map: "Profile.userId")
  user   User    @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model User {
  email   String   @unique(map: "User.email")
  id      Int      @id @default(autoincrement())
  name    String?
  posts   Post[]
  profile Profile?
}


// introspectionSchemaVersion: Prisma2,
`;

exports[`common/sqlite basic introspection with invalid --url - empty host 2`] = ``;

exports[`common/sqlite basic introspection with invalid --url if schema is unspecified 2`] = ``;

exports[`common/sqlite introspection --force 2`] = `
generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = "file:dev.db"
}

model Post {
  authorId  Int
  content   String?
  createdAt DateTime @default(now())
  id        Int      @id @default(autoincrement())
  published Boolean  @default(false)
  title     String
  User      User     @relation(fields: [authorId], references: [id], onDelete: Cascade)
}

model Profile {
  bio    String?
  id     Int     @id @default(autoincrement())
  userId Int     @unique(map: "Profile.userId")
  User   User    @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model User {
  email   String   @unique(map: "User.email")
  id      Int      @id @default(autoincrement())
  name    String?
  Post    Post[]
  Profile Profile?
}


// introspectionSchemaVersion: Prisma2,
`;

exports[`common/sqlite should succeed and keep changes to valid schema and output warnings when using --print 2`] = `
generator client {
  provider = "prisma-client-js"
  output   = "../generated/client"
}

datasource db {
  provider = "sqlite"
  url      = "file:dev.db"
}

model AwesomeUser {
  email    String           @unique(map: "User.email")
  id       Int              @id @default(autoincrement())
  name     String?
  newPosts AwesomeNewPost[]
  profile  AwesomeProfile?

  @@map("User")
}

model AwesomeNewPost {
  authorId  Int
  content   String?
  createdAt DateTime    @default(now())
  id        Int         @id @default(autoincrement())
  published Boolean     @default(false)
  title     String
  author    AwesomeUser @relation(fields: [authorId], references: [id], onDelete: Cascade)

  @@map("Post")
}

model AwesomeProfile {
  bio    String?
  id     Int         @id @default(autoincrement())
  userId Int         @unique(map: "Profile.userId")
  user   AwesomeUser @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("Profile")
}


// introspectionSchemaVersion: NonPrisma,
`;

exports[`common/sqlite should succeed when schema is invalid and using --force 7`] = `
generator client {
  provider = "prisma-client-js"
  output   = "../generated/client"
}

datasource db {
  provider = "sqlite"
  url      = "file:dev.db"
}

model Post {
  authorId  Int
  content   String?
  createdAt DateTime @default(now())
  id        Int      @id @default(autoincrement())
  published Boolean  @default(false)
  title     String
  User      User     @relation(fields: [authorId], references: [id], onDelete: Cascade)
}

model Profile {
  bio    String?
  id     Int     @id @default(autoincrement())
  userId Int     @unique(map: "Profile.userId")
  User   User    @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model User {
  email   String   @unique(map: "User.email")
  id      Int      @id @default(autoincrement())
  name    String?
  Post    Post[]
  Profile Profile?
}

`;

exports[`mysql basic introspection --url 2`] = `
datasource db {
  provider = "mysql"
  url      = "mysql://root:root@localhost:3306/tests"
}

model your_log {
  click_id     Int      @id @default(autoincrement())
  click_time   DateTime @db.DateTime(0)
  shorturl     String   @db.VarChar(200)
  referrer     String   @db.VarChar(200)
  user_agent   String   @db.VarChar(255)
  ip_address   String   @db.VarChar(41)
  country_code String   @db.Char(2)

  @@index([shorturl], map: "shorturl")
}

model your_options {
  option_id    BigInt @default(autoincrement()) @db.UnsignedBigInt
  option_name  String @default("") @db.VarChar(64)
  option_value String @db.LongText

  @@id([option_id, option_name])
  @@index([option_name], map: "option_name")
}

model your_url {
  keyword   String   @id @db.VarChar(200)
  url       String   @db.Text
  title     String?  @db.Text
  timestamp DateTime @default(now()) @db.Timestamp(0)
  ip        String   @db.VarChar(41)
  clicks    Int      @db.UnsignedInt

  @@index([ip], map: "ip")
  @@index([timestamp], map: "timestamp")
}


// introspectionSchemaVersion: NonPrisma,
`;

exports[`mysql basic introspection 2`] = `
datasource db {
  provider = "mysql"
  url      = env("TEST_MYSQL_URI")
}

model your_log {
  click_id     Int      @id @default(autoincrement())
  click_time   DateTime @db.DateTime(0)
  shorturl     String   @db.VarChar(200)
  referrer     String   @db.VarChar(200)
  user_agent   String   @db.VarChar(255)
  ip_address   String   @db.VarChar(41)
  country_code String   @db.Char(2)

  @@index([shorturl], map: "shorturl")
}

model your_options {
  option_id    BigInt @default(autoincrement()) @db.UnsignedBigInt
  option_name  String @default("") @db.VarChar(64)
  option_value String @db.LongText

  @@id([option_id, option_name])
  @@index([option_name], map: "option_name")
}

model your_url {
  keyword   String   @id @db.VarChar(200)
  url       String   @db.Text
  title     String?  @db.Text
  timestamp DateTime @default(now()) @db.Timestamp(0)
  ip        String   @db.VarChar(41)
  clicks    Int      @db.UnsignedInt

  @@index([ip], map: "ip")
  @@index([timestamp], map: "timestamp")
}


// introspectionSchemaVersion: NonPrisma,
`;

exports[`postgresql basic introspection --url 2`] = `
datasource db {
  provider = "postgresql"
  url      = "postgres://prisma:prisma@localhost:5432/tests-migrate"
}

model Post {
  id        String    @id
  createdAt DateTime  @default(now())
  updatedAt DateTime  @default(dbgenerated("'1970-01-01 00:00:00'::timestamp without time zone"))
  published Boolean   @default(false)
  title     String
  content   String?
  authorId  String?
  jsonData  Json?
  coinflips Boolean[]
  User      User?     @relation(fields: [authorId], references: [id])
}

model User {
  id    String  @id
  email String  @unique(map: "User.email")
  name  String?
  Post  Post[]
}

enum Role {
  USER
  ADMIN
}


// introspectionSchemaVersion: NonPrisma,
`;

exports[`postgresql basic introspection 2`] = `
datasource db {
  provider = "postgres"
  url      = env("TEST_POSTGRES_URI_MIGRATE")
}

model Post {
  id        String    @id
  createdAt DateTime  @default(now())
  updatedAt DateTime  @default(dbgenerated("'1970-01-01 00:00:00'::timestamp without time zone"))
  published Boolean   @default(false)
  title     String
  content   String?
  authorId  String?
  jsonData  Json?
  coinflips Boolean[]
  User      User?     @relation(fields: [authorId], references: [id])
}

model User {
  id    String  @id
  email String  @unique(map: "User.email")
  name  String?
  Post  Post[]
}

enum Role {
  USER
  ADMIN
}


// introspectionSchemaVersion: NonPrisma,
`;

exports[`postgresql-multi-schema --url with \`?schema=base\` should succeed 2`] = `
datasource db {
  provider = "postgresql"
  url      = "postgres://prisma:prisma@localhost:5432/tests-migrate?schema=base"
}

model User {
  id    String @id
  email String
}

model some_table {
  id    String @id(map: "User_pkey2")
  email String
}


// introspectionSchemaVersion: NonPrisma,
`;

exports[`postgresql-multi-schema --url with \`?schema=does-not-exist\` should error with with P4001, empty database 1`] = ``;

exports[`postgresql-multi-schema datasource property \`schemas=["base"]\` should succeed 2`] = `
generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["multiSchema"]
}

datasource db {
  provider = "postgres"
  url      = env("TEST_POSTGRES_URI_MIGRATE")
  schemas  = ["base"]
}

model User {
  id    String @id
  email String

  @@schema("base")
}

model some_table {
  id    String @id(map: "User_pkey2")
  email String

  @@schema("base")
}


// introspectionSchemaVersion: NonPrisma,
`;

exports[`postgresql-multi-schema datasource property \`schemas=["does-not-exist", "base"]\` should succeed 2`] = `
generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["multiSchema"]
}

datasource db {
  provider = "postgres"
  url      = env("TEST_POSTGRES_URI_MIGRATE")
  schemas  = ["base", "does-not-exist"]
}

model User {
  id    String @id
  email String

  @@schema("base")
}

model some_table {
  id    String @id(map: "User_pkey2")
  email String

  @@schema("base")
}


// introspectionSchemaVersion: NonPrisma,
`;

exports[`postgresql-multi-schema datasource property \`schemas=["does-not-exist"]\` should error with P4001, empty database 1`] = ``;
